# tv-backlight

./: .gitignore  BOTTLENECK_ANALYSIS.md  CAMERA_SETUP.md  CHANGES_SUMMARY.md  CMakeLists.txt  CMakePresets.json  EDGE_SLICES_MODE.md  FLATBUFFER_MIGRATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LIBCAMERA_SETUP.md  Makefile.analysis  NEON_IMPLEMENTATION_SUMMARY.md  NEON_OPTIMIZATION.md  NEON_VERIFICATION.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS_INDEX.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICKSTART.md  QUICK_OPTIMIZATION_GUIDE.md  README.md  README_PERFORMANCE.md  SIMPLE_CAMERA_SETUP.md  SIMPLE_SOLUTION.md  START_HERE.md  UPGRADE_SUMMARY.md  USB_DIRECT_MODE.md  USB_QUICK_START.md  USB_RUN_EXAMPLE.md  WHY_NEON_ISNT_ENOUGH.txt  add_profiling.patch  analyze_bottleneck.cpp  auto_run_with_tv.sh  benchmark_neon.sh  build_pi.sh  check_flatbuffers.sh  config.hyperhdr.json  config.json  cpp.code-workspace  diagnose_camera.sh  (+10 more)
include/communication/: HyperHDRClient.h  LEDLayout.h  USBController.h
include/core/: CameraFrameSource.h  Config.h  FrameSource.h  ImageFrameSource.h  LEDController.h
include/flatbuffer/: hyperion_reply_generated.h  hyperion_request_generated.h
include/processing/: BezierCurve.h  ColorExtractor.h  CoonsPatching.h
include/utils/: Logger.h  PerformanceTimer.h
schemas/: README.md
src/: app.cpp  main.cpp
src/communication/: HyperHDRClient.cpp  LEDLayout.cpp  USBController.cpp
src/core/: CameraFrameSource.cpp  Config.cpp  ImageFrameSource.cpp  LEDController.cpp
src/processing/: BezierCurve.cpp  ColorExtractor.cpp  CoonsPatching.cpp
